--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 DB='mongodb://{IP}:{PORT}/{DB_NAME}'
 
 UPS_ACCESS_KEY={UPS ACCESS KEY HERE}
+UPS_URL="https://onlinetools.ups.com/track/v1/details/"
 
 USPS_USERNAME={USPS USERID KEY HERE}
 USPS_URL="https://secure.shippingapis.com/ShippingAPI.dll?API=TrackV2&XML="
