--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-ladda": "^6.0.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
