Update README and add comment to example .env

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# remove the curly braces when you replace the fields below:
 UPS_ACCESS_KEY={UPS ACCESS KEY HERE}
 USPS_USERNAME={USPS USERID KEY HERE}
 
