--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "Joshua Taillon",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": ">=0.21.1",
     "body-parser": "^1.18.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "ini": ">=1.3.6",
     "jsdom": "^16.4.0",
     "mongoose": "^5.10.3",
+    "mquery": ">=3.2.3",
     "playwright": "^1.4.0",
     "timezonecomplete": "^5.11.2",
     "yarn": "^1.22.5"
