Update Fedex tracker to use API

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 UPS_ACCESS_KEY={UPS ACCESS KEY HERE}
 USPS_USERNAME={USPS USERID KEY HERE}
 
+FEDEX_API_URL=https://apis.fedex.com
+FEDEX_API_KEY={FEDEX API KEY HERE}
+FEDEX_SECRET_KEY={FEDEX SECRET KEY HERE}
+
 MONGO_USERNAME={USERNAME HERE}
 MONGO_PASSWORD={PASSWORD HERE}
 MONGO_PORT=27017
