--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ MONGO_PORT=27017
 MONGO_DB=packages
 
 TZ='America/Denver'
+
+# change the following when using the debug-xxx-parser or debug-xxx-tracker
+# scripts from package.json
+TEST_TRACKING_NUMBER=XYZ123ABC789
