Rearrange project structure; remove confusing bind mount volumes from docker compose stack; update docker base image versions and code to be compatible

--- a/api_server/Dockerfile
+++ b/api_server/Dockerfile
@@ -1,11 +1,11 @@
-FROM node:14.10.1-stretch
+FROM node:20-bullseye-slim
 RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
 
-RUN apt update
+RUN apt-get update
 RUN apt-get install -y netcat ffmpeg libnss3 libnspr4 libatk-bridge2.0-0 libx11-xcb1 libxcb-dri3-0 libdrm2 libgbm1 libasound2 libatspi2.0-0 libgtk-3-0 
 
 WORKDIR /home/node/app
-COPY package*.json ./
+COPY --chown=node:node package*.json ./
 USER node
 RUN npm install
 COPY --chown=node:node . .
