--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,8 @@
-FROM node:10-alpine
+FROM node:20-alpine
 RUN mkdir -p /home/node/app/client/node_modules && chown -R node:node /home/node/app
 
 WORKDIR /home/node/app/client
-COPY package*.json ./
+COPY --chown=node:node package*.json ./
 USER node
 RUN npm install
 COPY --chown=node:node . .
