--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "packagemate-client",
-  "version": "1.2.1-dev",
+  "version": "1.2.2",
   "private": true,
   "proxy": "http://packagemate-server:5000",
   "dependencies": {
